--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "@openzeppelin/contracts": "^5.3.0",
     "@types/base64url": "^2.0.3",
     "base64url": "^3.0.1",
-    "hardhat": "^2.23.0"
-  },
-  "devDependencies": {
+    "hardhat": "^2.23.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   }
 }
